--- a/Templates/login.ejs
+++ b/Templates/login.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Login</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -13,7 +14,7 @@
 		}
 		.card{
 			position: absolute;
-		    top: 208px;
+		    top: 98px;
 		    width: 100%;
 		}
 		#username,#password{
@@ -56,10 +57,21 @@
 						<h4 class="display-4">Member Login</h4>
 					</div>
 					<div class="col-md-2 col-sm-4 col-1"></div>
-			  	</div>
+			  	</div><% if(data){ %>
 			  	<div class="row">
-			  		<div class="col-md-4 col-sm-4 col-1"></div>
-					<div class="col-md-4 col-sm-4 col-10">
+			  		<div class="col-md-2 col-sm-4 col-1"></div>
+					<div class="col-md-8 col-sm-4 col-10">
+						<div class="errorList alert alert-warning">
+							<ul id="ols">
+									<li class="text-danger"><%= JSON.stringify(data).substring(4,JSON.stringify(data).length-4) %></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-2 col-sm-4 col-1"></div>
+			  	</div><% } %>
+			  	<div class="row">
+			  		<div class="col-md-4 col-sm-2 col-1"></div>
+					<div class="col-md-4 col-sm-8 col-10">
 						<div id="login">
 							<form action="login-done"method="POST">
 									<div class="input">
@@ -78,14 +90,15 @@
 								    			<input class="ip" id="password" tabindex="1" type="password" name="password"
 								    			placeholder="Type Your password">
 								    		</div>
-								    	</div>
-										<input type="submit" class="btn btn-success" 
-										value="login">
+								    		<input type="submit" class="btn btn-success" 
+										value="login" style="width: 100%;"><br><br>
+								    	</div><span class="text-danger" style="font-size: 20px;">Dont Have an account ?</span>
+								    	<a href="/register"><input type="button" class="btn btn-warning" value="Register" style="    width: 100%;margin-top: 15px;"></a><br>
 									</div>
 							</form>
 					    </div>
 					</div>
-					<div class="col-md-4 col-sm-4 col-1"></div>
+					<div class="col-md-4 col-sm-2 col-1"></div>
 			  	</div>
 			  </div>
 			</div>
