--- a/Templates/task_settings.ejs
+++ b/Templates/task_settings.ejs
@@ -2,13 +2,11 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Profile Page</title>
-  <link rel="shortcut icon" href="logo1.jpg">
+  <title>Task Settings</title>
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/dacf88b734.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-  <link rel="manifest" href="/manifest.json">
 <style>
 body {
   font-family: "Lato", sans-serif;
@@ -25,7 +23,12 @@ body {
       transition: 0.5s;
       padding-top: 60px;
     }
-
+    .nav_img{
+          width: 68%;
+          position: absolute;
+          left: 24%;
+          bottom: 20px;
+      }
     .sidenav a {
       padding: 8px 8px 8px 32px;
       text-decoration: none;
@@ -35,20 +38,11 @@ body {
       transition: 0.3s;
       margin-left: 30px;
     }
-    .logo{
-        width: 75%;
-        height: 156px;
-        margin-left: 55px;
-      }
+
     .sidenav a:hover {
       color: #f1f1f1;
     }
-    .nav_img{
-          width: 68%;
-          position: absolute;
-          left: 24%;
-          bottom: 20px;
-      }
+
     .sidenav .closebtn {
       position: absolute;
       top: 0;
@@ -62,6 +56,11 @@ body {
 .projtitle{
       font-family: cursive;
 }
+.logo{
+        width: 75%;
+        height: 156px;
+        margin-left: 55px;
+      }
 ::-webkit-scrollbar{
       width: 0;
     }
@@ -91,8 +90,8 @@ body {
       &#9776;</span>
       </div>
       <div class="col-md-10 col-sm-10 col-10">
-        <h4 class="alert-heading">Welcome <%= data[0].name %> !!!</h4>
-        <p class="bd-lead font-weight-lighter">Edit your Profile Details.</p>
+        <h4 class="alert-heading">Welcome <%= data.name %> !!!</h4>
+        <p class="bd-lead font-weight-lighter">Edit your Task Details.</p>
         <hr>
         <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
       </div>
@@ -103,7 +102,7 @@ body {
 <div class="row">
   <div class="col-md-4 col-sm-4 col-1"></div>
   <div class="col-md-4 col-sm-4 col-10">
-    <h4 class="font-weight-light lead projtitle font-size-29">General Settings</h4>
+    <h4 class="font-weight-light lead projtitle font-size-29">Task Settings</h4>
   </div>
   <div class="col-md-4 col-sm-4 col-1"></div>
 </div>
@@ -111,18 +110,22 @@ body {
   <div class="row">
   <div class="col-md-2 col-sm-2 col-1"></div>
   <div class="col-md-7 col-sm-7 col-10">
-    <form action="/save-basic-profile" method="POST">
-  <div class="form-group">
-    <label for="exampleInputFullname" class="lead">Full Name</label>
-    <input type="text" class="form-control" id="exampleInputFullname" required name="fname"
-    placeholder= <%- JSON.stringify(data[0].name) %> >
-  </div>
-  <div class="form-group">
-    <label for="exampleInputEmail1" class="lead">Email address</label>
-    <input type="email" class="form-control" required id="exampleInputEmail1" aria-describedby="emailHelp" name="username" placeholder=<%- JSON.stringify(data[0].email) %>>
-  </div>
-  <button type="submit" class="btn btn-primary">Save Changes</button>
-</form>
+  <form action="/save-clock-settings" method="POST">
+    <label class="lead">Clock Format</label><br>
+    <div class="custom-control custom-radio custom-control-inline">
+      <input type="radio" id="customRadioInline1"
+      class="custom-control-input" name="clock_format" value="12" required>
+      <label class="custom-control-label" for="customRadioInline1" >12 Hour Format</label>
+    </div>
+    <div class="custom-control custom-radio custom-control-inline">
+      <input type="radio" id="customRadioInline2" 
+      class="custom-control-input" name="clock_format" value="24" checked required>
+      <label class="custom-control-label" for="customRadioInline2">24 Hour Format</label>
+    </div>
+    <br>
+    <br>
+    <button type="submit" class="btn btn-primary">Save Changes</button>
+  </form>
   </div>
   <div class="col-md-3 col-sm-3 col-1"></div>
 </div>
@@ -145,9 +148,7 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
 
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('/sw.js')
-}
+
 </script>
 
 </body>
